<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">ANYWAY</string>
    <string name="press_back_again_to_exit">הקש בשנית על מקש החזרה כדי לצאת</string>

    <!-- Settings -->
    <string name="action_settings">הגדרות</string>

    <!-- Main map activity -->
    <string name="action_report_bug">דווח על תקלה</string>
    <string name="action_about">מידע נוסף</string>
    <string name="marker_default_desc">לחץ כאן לפרטים נוספים</string>

    <string name="info_dialog_title">אודות ANYWAY</string>
    <string name="info_dialog_msg">\u200FANYWAY היא הדרך שלנו למנוע את התאונה הבאה. ביחד, נהגים, הולכי רגל, אזרחים ומקבלי החלטות נאבק בתאונות הדרכים.\n\n\u200FANYWAY מציגה על גבי מפה תאונות דרכים עם נפגעים (ע״פ נתוני הלשכה המרכזית לסטטיסטיקה).\n\nבנוסף, ישנה אפשרות לפתוח דיון מבוסס מיקום (באמצעות לחיצה ארוכה בכל נקודה פנויה במפה)  על מנת לדון בנקודות בעייתיות, פתרונות אפשריים והתארגנות אזרחית.\n\nבאמצעות ידע זמין, נגיש ושקוף אנו שואפים להעלות את המודעות לנושא תאונות הדרכים ולהעצים את יכולת ההשפעה של כל אחד ואחת על הסביבה הקרובה- הבית, השכונה, בית הספר של הילדים, מקום העבודה ועוד- על ידי פעולה משותפת בקהילה. אנחנו מאמינים שבעזרת ידע ציבורי קיים המוצג באתר יווצרו ידע ותובנות חדשים. שיתוף הידע הזה יאפשר לחברה האזרחית להתארגן לפעולה אקטיבית ולהזרים הצעות, רעיונות והתראות בחזרה אל הרשויות.</string>

    <!-- Disqus activity -->
    <string name="title_activity_disqus">דיון</string>
    <string name="refresh_comments">טען מחדש</string>
    <string name="confirm_opening_new_discussion_title">רק מוודאים…</string>
    <string name="confirm_opening_new_discussion">האם ברצונך לפתוח דיון חדש בנקודה זו?</string>

    <!-- Search Strings -->
    <string name="action_address_search">חפש כתובת</string>
    <string name="address_search_hint">חפש כתובת…</string>
    <string name="address_empty">יש להכניס כתובת לחיפוש</string>
    <string name="address_you_searched">הכתובת שחיפשת:</string>
    <string name="address_searching">מחפש…</string>

    <string name="address_result_title">האם התכוונת ל:</string>
    <string name="address_not_found_title">לא נמצאה כתובת</string>
    <string name="address_not_found_details">אנא בדוק את הכתובת שהכנסת</string>
    <string name="search">חפש</string>

    <!-- marker_info_window -->
    <string name="icon">אייקון תאונה</string>
    <string name="accidents">תאונות</string>

    <string name="cancel">ביטול</string>
    <string name="close">סגור</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="my_location">המיקום שלי</string>

    <!-- internet connection -->
    <string name="no_internet_connection">לא ניתן להציג מידע ללא חיבור לאינטרנט, יש להתחבר לרשת האינטרנט ולנסות שנית</string>
    <string name="no_internet_connection_title">אין חיבור אינטרנט</string>
    <string name="ok_got_it">בסדר, הבנתי</string>


    <!-- Sharing -->
    <string name="action_share_screen">שתף מסך נוכחי</string>
    <string name="share_subject">שיתוף תאונות באזורך מ ANYWAY</string>
    <string name="share_title">שיתוף מ ANYWAY</string>
    <string name="confirm_move_to_url_data">זיהינו שנכנסת לאפליקציה מלינק חיצוני, האם ברצונך לעדכן את התצוגה בהתאם?</string>
    <string name="action_share_disqus">שתף דיון נוכחי</string>
    <string name="share_disqus_title">שיתוף דיון מ ANYWAY</string>
    <string name="share_new_disqus_error">לא ניתן לשתף דיון חדש ללא תגובות, יש להגיב קודם</string>

    <!-- Tutorial -->
    <string name="title_activity_tutorial">הדרכה</string>
    <string name="next">הבא</string>
    <string name="skip">דלג</string>
    <string name="done">סיום</string>
    <string name="tutorial_screen_a_text">\u200FANYWAY זו הדרך שלנו למנוע את התאונה הבאה</string>
    <string name="tutorial_screen_a_btn_text">בואו נראה לכם איך</string>
    <string name="tutorial_screen_b_text">על המפה ניתן לראות היכן התרחשו תאונות דרכים עם נפגעים</string>
    <string name="tutorial_screen_b_location_sub_text">מסמל את המיקום שלך</string>
    <string name="tutorial_screen_b_disqus_sub_text">מסמל דיון פעיל</string>
    <string name="tutorial_screen_c_text">לא מוצאים תאונה ספציפית?\nשנו את הגדרות סינון התאונות</string>
    <string name="tutorial_screen_d_text">מכירים אזור בעייתי?\nחפשו אותו לפי כתובת</string>
    <string name="tutorial_screen_d_subtext">לחצו לחיצה ארוכה בכל נקודה במפה על מנת לפתוח דיון חדש</string>
    <string name="tutorial_screen_e_btn_text">בואו נתחיל</string>
    <string name="tutorial_screen_e_text">אנחנו מאמינים שבעזרת ידע ציבורי קיים המוצג באתר יווצרו ידע ותובנות חדשים.\nשיתוף הידע הזה יאפשר לחברה האזרחית להתארגן לפעולה אקטיבית ולהזרים הצעות, רעיונות והתראות בחזרה אל הרשויות.\nכל זה יכול להיות אפשרי עם העזרה שלכם.</string>

</resources>
