<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_address_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share_screen"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_report_bug"
        android:title="@string/action_report_bug"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        />
</menu>
