<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="il.co.anyway.app.TutorialActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/anyway_logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/tutorial_screen_a_text"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_screen_a_btn_text"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:background="#ff005a17"
        android:textColor="#fff"
        android:padding="20dp"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="nextTutorialPage" />


</RelativeLayout>
